# newrelic-unofficial-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: test-and-lint.yml
examples/: simple.rs  web.rs
src/: analytics_events.rs  apdex.rs  app_run.rs  collector.rs  config.rs  connect_reply.rs  domain_defs.rs  harvest.rs  lib.rs  limits.rs  metric_names.rs  metrics.rs  payloads.rs  sync_util.rs  transaction.rs  transaction_trace.rs  utilization.rs
src/collector/: settings.rs
src/payloads/: analytics_events.rs  metrics.rs  transaction_trace.rs
