[package]
name = "newrelic-unofficial-rust"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
parking_lot = "0.11.0"
attohttpc = { version = "0.15.0", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
flate2 = "1.0.16"
anyhow = "1.0.31"
thiserror = "1.0.20"
hostname = "0.3.1"
sysinfo = "0.14.13"
get_if_addrs = "0.5.3"
# url = "2.1.1"
