[package]
name = "newrelic-unofficial"
version = "0.1.1-alpha.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"
description = "New Relic instrumentation in pure Rust"
# documentation = "https://docs.rs/newrelic-unofficial"
readme = "README.md"
# homepage = "https://github.com/qnighy/newrelic-unofficial-rust"
repository = "https://github.com/qnighy/newrelic-unofficial-rust"
license = "Apache-2.0"
keywords = ["newrelic", "performance"]
categories = ["api-bindings", "development-tools", "development-tools::profiling", "web-programming"]
is-it-maintained-issue-resolution = { repository = "qnighy/newrelic-unofficial-rust" }
is-it-maintained-open-issues = { repository = "qnighy/newrelic-unofficial-rust" }

[dependencies]
log = "0.4.11"
parking_lot = "0.11.0"
attohttpc = { version = "0.15.0", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
flate2 = "1.0.16"
thiserror = "1.0.20"
hostname = "0.3.1"
sysinfo = "0.15.0"
get_if_addrs = "0.5.3"
# url = "2.1.1"
