[package]
name = "newrelic-unofficial"
version = "0.2.0-alpha.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"
description = "New Relic instrumentation in pure Rust"
# documentation = "https://docs.rs/newrelic-unofficial"
readme = "README.md"
# homepage = "https://github.com/qnighy/newrelic-unofficial-rust"
repository = "https://github.com/qnighy/newrelic-unofficial-rust"
license = "Apache-2.0"
keywords = ["newrelic", "performance"]
categories = ["api-bindings", "development-tools", "development-tools::profiling", "web-programming"]

[badges]
is-it-maintained-issue-resolution = { repository = "qnighy/newrelic-unofficial-rust" }
is-it-maintained-open-issues = { repository = "qnighy/newrelic-unofficial-rust" }

[dependencies]
# Public dependencies
http = "0.2.1"

# Private dependencies
log = "0.4.11"
parking_lot = "0.11.0"
attohttpc = { version = "0.17.0", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
flate2 = "1.0.16"
thiserror = "1.0.20"
hostname = "0.3.1"
sysinfo = "0.20.4"
get_if_addrs = "0.5.3"
# url = "2.1.1"

[dev-dependencies]
env_logger = "0.8.2"
dotenv = "0.15.0"
